--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 h2{
     width: 20vw;
-    font-family: 'Alfa Slab One', serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 header > nav {
@@ -30,5 +30,5 @@ img {
 }
 
 header {
-    font-family: 'Alfa Slab One', serif;
+    font-family: 'Oswald', sans-serif;
 }
